changes to add the web console to the toolbox

--- a/browser/locales/en-US/chrome/browser/devtools/webconsole.properties
+++ b/browser/locales/en-US/chrome/browser/devtools/webconsole.properties
@@ -145,3 +145,10 @@ maxTimersExceeded=The maximum allowed number of timers in this page was exceeded
 # Console and tries the Update button, but the new result no longer returns an
 # object that can be inspected.
 JSTerm.updateNotInspectable=After your input has been re-evaluated the result is no longer inspectable.
+
+
+# LOCALIZATION NOTE (ToolboxWebconosle.label):
+# This string is displayed in the title of the tab when the web console is
+# displayed inside the developer tools window it is probably the same string
+# as webConsoleWindowTitleAndURL before the '-'
+ToolboxWebconosle.label=Web Console
