Begin l10n as part of issue #25

--- a/browser/locales/en-US/chrome/browser/devtools/webconsole.properties
+++ b/browser/locales/en-US/chrome/browser/devtools/webconsole.properties
@@ -147,8 +147,8 @@ maxTimersExceeded=The maximum allowed number of timers in this page was exceeded
 JSTerm.updateNotInspectable=After your input has been re-evaluated the result is no longer inspectable.
 
 
-# LOCALIZATION NOTE (ToolboxWebconosle.label):
+# LOCALIZATION NOTE (ToolboxWebconsole.label):
 # This string is displayed in the title of the tab when the web console is
 # displayed inside the developer tools window it is probably the same string
 # as webConsoleWindowTitleAndURL before the '-'
-ToolboxWebconosle.label=Web Console
+ToolboxWebconsole.label=Web Console
